--- a/Lesson 68/translucent.html
+++ b/Lesson 68/translucent.html
@@ -10,7 +10,7 @@
     <style>
     </style>
 </head>
-<body>
+<body class="bg-dark">
      
 <div class="container mt-3">
     <div class="row justify-content-center">
